fix excessive spacing in inline interps

--- a/front_end/css/less/module/interpretations.less
+++ b/front_end/css/less/module/interpretations.less
@@ -20,20 +20,12 @@
         padding-top: 0;
     }
 
-    li { /* reset borders & padding */
+    li { /* reset borders */
         border: none;
-        padding-top: 0;
-        padding-bottom: 0;
-        margin-top: 0;
-        margin-bottom: 0;
     }
 
     .level-1 > li {
         border-bottom: none;
-        margin-top: 0;
-        margin-bottom: 0;
-        padding-top: 0;
-        padding-bottom: 0;
     } 
 
 
